--- a/src/main/resources/com/matteotocci/app/css/Alert-Dialog-Style.css
+++ b/src/main/resources/com/matteotocci/app/css/Alert-Dialog-Style.css
@@ -85,7 +85,7 @@
 }
 
 /* Bottone Annulla */
-.dialog-pane .button-bar .button:cancel-button {
+.cancel-button {
     -fx-background-color: linear-gradient(to bottom, #95a5a6, #7f8c8d);
     -fx-text-fill: white;
     -fx-border-color: transparent;
@@ -93,7 +93,7 @@
     -fx-effect: dropshadow(gaussian, rgba(127,140,141,0.3), 8, 0, 0, 2);
 }
 
-.dialog-pane .button-bar .button:cancel-button:hover {
+.cancel-button:hover {
     -fx-background-color: linear-gradient(to bottom, #7f8c8d, #6c7b7d);
     -fx-effect: dropshadow(gaussian, rgba(127,140,141,0.5), 12, 0, 0, 3);
     -fx-scale-x: 1.05;
